# rotcev

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  output.txt
src/: functionality.hpp  logging_profiling.cpp  logging_profiling.hpp  main.cpp  rotcev.hpp
